Migrate the CCF Eclipse plugin set from Java 8 to Java 25
Mechanical stack migration, driven by OpenRewrite. Compiles on JDK 25:
254 of 267 sources -> 534 classes, identical to the JDK 8 baseline (the same
13 files stay excluded for the same reason - see legacy/README.md; the
exclusion list was not widened). There are no tests anywhere in this
repository, so compilation is the only available check.

Recipes: the same composite as the core repository, see rewrite.yml -
  com.collabnet.ccf.UpgradeToJava21WithoutSwitchRewrites
    (= UpgradeToJava21 minus its six if/else-if-to-switch sub-recipes, which
     emit invalid and behaviour-changing code on this codebase)
  UpgradeBuildToJava25, UpgradePluginsForJava25, MigrateZipErrorToZipException,
  JUnit4to5Migration (a no-op here - zero JUnit usage in the repository)

80 files touched. What changed:
  - source/target 1.6 -> 25
  - InstanceOfPatternMatch: `(Cast) x` after instanceof -> pattern variables
  - SequencedCollection: List.get(0) -> getFirst()
  - AddSerialAnnotationToSerialVersionUID: 13 @Serial annotations
  - RemoveExtraSemicolons, whitespace/indentation normalisation
  - ChangeDefaultKeyStore in TrackerHttpSender: KeyStore.getDefaultType() ->
    "jks". This is behaviour *preserving*, not a behaviour change - Java 11
    moved the default keystore from JKS to PKCS12, and pinning the literal
    keeps the Java 8 semantics the code was written against.
  - plugins: maven-compiler-plugin 3.13.0 -> 3.15.0
  - dependencies: com.sun.xml.ws:jaxws-rt 2.3.7 added (provided), junit
    excluded from commons-httpclient's transitive set

No hand edits to any source file were needed in this repository.

jakarta.*: no recipe applied. All 71 javax.* import lines are either still-JDK
packages (JAXP 36, JMX 18, JSSE/JAAS 9) or, for the 6 javax.xml.rpc /
javax.xml.ws lines, part of signatures shared with vendored proprietary SOAP
bytecode that only exists in the javax namespace. rewrite.yml has the
breakdown. javax.xml.ws, a 