@@ -83,15 +83,15 @@ public class GenericArtifactHelper {
 	public static final String DEP_CHILD_SOURCE_ARTIFACT_ID = "depChildSourceArtifactId";
 	public static final String DEP_CHILD_SOURCE_REPOSITORY_ID = "depChildSourceRepositoryId";
 	public static final String DEP_CHILD_SOURCE_REPOSITORY_KIND = "depChildSourceRepositoryKind";
-	public static final String DEP_CHILD_TARGET_ARTIFACT_ID = "depChildTargetArtifactId";;
-	public static final String DEP_CHILD_TARGET_REPOSITORY_ID = "depChildTargetRepositoryId";;
-	public static final String DEP_CHILD_TARGET_REPOSITORY_KIND = "depChildTargetRepositoryKind";;
+	public static final String DEP_CHILD_TARGET_ARTIFACT_ID = "depChildTargetArtifactId";
+	public static final String DEP_CHILD_TARGET_REPOSITORY_ID = "depChildTargetRepositoryId";
+	public static final String DEP_CHILD_TARGET_REPOSITORY_KIND = "depChildTargetRepositoryKind";
 	public static final String DEP_PARENT_SOURCE_ARTIFACT_ID = "depParentSourceArtifactId";
 	public static final String DEP_PARENT_SOURCE_REPOSITORY_ID = "depParentSourceRepositoryId";
 	public static final String DEP_PARENT_SOURCE_REPOSITORY_KIND = "depParentSourceRepositoryKind";
-	public static final String DEP_PARENT_TARGET_ARTIFACT_ID = "depParentTargetArtifactId";;
-	public static final String DEP_PARENT_TARGET_REPOSITORY_ID = "depParentTargetRepositoryId";;
-	public static final String DEP_PARENT_TARGET_REPOSITORY_KIND = "depParentTargetRepositoryKind";;
+	public static final String DEP_PARENT_TARGET_ARTIFACT_ID = "depParentTargetArtifactId";
+	public static final String DEP_PARENT_TARGET_REPOSITORY_ID = "depParentTargetRepositoryId";
+	public static final String DEP_PARENT_TARGET_REPOSITORY_KIND = "depParentTargetRepositoryKind";
 	public static final String SOURCE_ARTIFACT_ID = "sourceArtifactId";
 	public static final String SOURCE_REPOSITORY_ID = "sourceRepositoryId";
 	public static final String SOURCE_REPOSITORY_KIND = "sourceRepositoryKind";
@@ -494,7 +494,7 @@ public class GenericArtifactHelper {
 				break;
 			}
 			case DOUBLE: {
-				genericArtifactField.setFieldValue(new Double(value));
+				genericArtifactField.setFieldValue(Double.valueOf(value));
 				break;
 			}
 			case HTMLSTRING: {
@@ -1050,19 +1050,19 @@ public class GenericArtifactHelper {
 			addAttribute(field, FIELD_VALUE_IS_NULL, FIELD_VALUE_IS_NULL_TRUE);
 		} else {
 			addAttribute(field, FIELD_VALUE_IS_NULL, FIELD_VALUE_IS_NULL_FALSE);
-			if (fieldValue instanceof Date)
+			if (fieldValue instanceof Date date)
 				synchronized (df) {
-					setValue(field, df.format((Date) fieldValue), false);
+					setValue(field, df.format(date), false);
 				}
-			else if (fieldValue instanceof Calendar)
+			else if (fieldValue instanceof Calendar calendar1)
 				synchronized (df) {
 					setValue(field, df
-							.format(((Calendar) fieldValue).getTime()), false);
+							.format(calendar1.getTime()), false);
 				}
-			else if (fieldValue instanceof XMLGregorianCalendar)
+			else if (fieldValue instanceof XMLGregorianCalendar calendar)
 				synchronized (df) {
 					setValue(field, df
-							.format(((XMLGregorianCalendar) fieldValue)
+							.format(calendar
 									.toGregorianCalendar().getTime()), false);
 				}
 			else
@@ -1094,7 +1094,7 @@ public class GenericArtifactHelper {
 		if (gaFields == null || gaFields.size() == 0) {
 			return null;
 		} else if (gaFields.size() == 1) {
-			GenericArtifactField field = gaFields.get(0);
+			GenericArtifactField field = gaFields.getFirst();
 			return field;
 		} else {
 			throw new RuntimeException(
@@ -1111,7 +1111,7 @@ public class GenericArtifactHelper {
 		if (gaFields == null || gaFields.size() == 0) {
 			return null;
 		} else if (gaFields.size() == 1) {
-			GenericArtifactField field = gaFields.get(0);
+			GenericArtifactField field = gaFields.getFirst();
 			return field;
 		} else {
 			throw new RuntimeException(
@@ -1146,11 +1146,10 @@ public class GenericArtifactHelper {
 		GenericArtifactField gaField = getMandatoryGAField(fieldName, ga);
 		if (gaField != null) {
 			Object fieldValueObj = gaField.getFieldValue();
-			if (fieldValueObj instanceof String) {
-				String fieldValueString = (String) fieldValueObj;
+			if (fieldValueObj instanceof String fieldValueString) {
 				fieldValue = Integer.parseInt(fieldValueString);
-			} else if (fieldValueObj instanceof Integer) {
-				fieldValue = ((Integer) fieldValueObj).intValue();
+			} else if (fieldValueObj instanceof Integer integer) {
+				fieldValue = integer.intValue();
 			}
 		}
 		return fieldValue;
@@ -1162,11 +1161,10 @@ public class GenericArtifactHelper {
 		GenericArtifactField gaField = getMandatoryGAField(fieldName, ga);
 		if (gaField != null) {
 			Object fieldValueObj = gaField.getFieldValue();
-			if (fieldValueObj instanceof String) {
-				String fieldValueString = (String) fieldValueObj;
+			if (fieldValueObj instanceof String fieldValueString) {
 				fieldValue = DateUtil.parse(fieldValueString);
-			} else if (fieldValueObj instanceof Date) {
-				fieldValue = (Date) fieldValueObj;
+			} else if (fieldValueObj instanceof Date date) {
+				fieldValue = date;
 			}
 		}
 		return fieldValue;
@@ -1189,7 +1187,7 @@ public class GenericArtifactHelper {
 		if (gaFields == null || gaFields.size() == 0) {
 			return null;
 		} else if (gaFields.size() == 1) {
-			GenericArtifactField field = gaFields.get(0);
+			GenericArtifactField field = gaFields.getFirst();
 			return field;
 		} else {
 			throw new RuntimeException(
